Can now produce histiograms (without axes)
git-svn-id: file:///mnt/svn/rtmath@60 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/glgraph-win/glgraph-win.vcxproj
+++ b/rtmath/glgraph-win/glgraph-win.vcxproj
@@ -139,8 +139,10 @@
     <ClCompile Include="camera.cpp" />
     <ClCompile Include="glform.cpp" />
     <ClCompile Include="glgraph-winControl.cpp" />
+    <ClCompile Include="histiogram.cpp" />
     <ClCompile Include="linePlot.cpp" />
     <ClCompile Include="markerSquare.cpp" />
+    <ClCompile Include="Rectangle.cpp" />
     <ClCompile Include="Plottable.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -165,6 +167,7 @@
     <ClInclude Include="markerSquare.h" />
     <ClInclude Include="Plottable.h" />
     <ClInclude Include="pointfconverter.h" />
+    <ClInclude Include="Rectangle.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
