Added more font support. They don't draw quite yet, but soon.
git-svn-id: file:///mnt/svn/rtmath@63 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/glgraph-win/glgraph-win.vcxproj
+++ b/rtmath/glgraph-win/glgraph-win.vcxproj
@@ -138,6 +138,7 @@
     <ClCompile Include="AssemblyInfo.cpp" />
     <ClCompile Include="BitmapFont.cpp" />
     <ClCompile Include="camera.cpp" />
+    <ClCompile Include="fontlabel.cpp" />
     <ClCompile Include="glform.cpp" />
     <ClCompile Include="glgraph-winControl.cpp" />
     <ClCompile Include="histiogram.cpp" />
@@ -159,6 +160,7 @@
       <FileType>CppClass</FileType>
     </ClInclude>
     <ClInclude Include="embedded.h" />
+    <ClInclude Include="fontlabel.h" />
     <ClInclude Include="glform.h">
       <FileType>CppClass</FileType>
     </ClInclude>
