Began redoing rtmatrix operations. Old methods were too clunky and wouldn't adapt well. Using smart pointers from boost for memory management.
git-svn-id: file:///mnt/svn/rtmath@64 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/glgraph-win/glgraph-win.vcxproj
+++ b/rtmath/glgraph-win/glgraph-win.vcxproj
@@ -70,6 +70,9 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
+    <ExecutablePath>C:\Users\reh9650\Documents\Visual Studio 2010\Projects\rtmath\rtmath-compile-depends\bin\win64;$(ExecutablePath)</ExecutablePath>
+    <IncludePath>C:\Users\reh9650\Documents\Visual Studio 2010\Projects\rtmath\rtmath-compile-depends\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\reh9650\Documents\Visual Studio 2010\Projects\rtmath\rtmath-compile-depends\libs\win64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
