damatrix mult now supported, I think
git-svn-id: file:///mnt/svn/rtmath@68 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -147,6 +147,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="damatrix.h" />
+    <ClInclude Include="damatrix_quad.h" />
     <ClInclude Include="debug.h" />
     <ClInclude Include="error.h" />
     <ClInclude Include="layer.h" />
@@ -156,6 +157,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="damatrix.cpp" />
+    <ClCompile Include="damatrix_quad.cpp" />
     <ClCompile Include="debug.cpp" />
     <ClCompile Include="layer.cpp" />
     <ClCompile Include="rtmath.cpp" />
