git-svn-id: file:///mnt/svn/rtmath@70 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/rtmath.vcxproj.filters
+++ b/rtmath/rtmath/rtmath.vcxproj.filters
@@ -65,6 +65,12 @@
     <None Include="app.ico">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="..\rtmath research 6-2-2011.pptx">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="..\rtmath research 7-2011.pptx">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="app.rc">
