--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -169,6 +169,8 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\rtmath research 6-2-2011.pptx" />
+    <None Include="..\rtmath research 7-2011.pptx" />
     <None Include="app.ico" />
     <None Include="ReadMe.txt" />
   </ItemGroup>
