--- a/rtmath/rtmath/rtmath.vcxproj.filters
+++ b/rtmath/rtmath/rtmath.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="damatrix_quad.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="atmos.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="rtmath.cpp">
@@ -57,6 +60,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="damatrix_quad.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="atmos.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
