--- a/rtmath/rtmath-base/Makefile
+++ b/rtmath/rtmath-base/Makefile
@@ -1,8 +1,10 @@
 CC=g++
 FILES=`ls *.cpp`
 OFILES=matrixop.o phaseFunc.o polynomial.o quadrature.o rtmath-base.o zeros.o
-CFLAGS=-rdynamic -shared -fPIC -Wall 
-LFLAGS=-Wl,export-dynamic -lm
+#CFLAGS=-rdynamic -shared -fPIC -Wall 
+CFLAGS=-Wall -shared -fPIC
+#LFLAGS=-Wl,export-dynamic -lm
+LFLAGS=-lm -lgcc_eh -lstdc++ --export-all-symbols
 
 
 all : static dynamic
@@ -11,7 +13,8 @@ static : $(OFILES)
 	ar rcs librtmathbase.a $(OFILES)
 
 dynamic : $(OFILES)
-	ld -G $(OFILES) -o librtmathbase.so
+	$(CC) $(CFLAGS) $(LFLAGS) -o librtmathbase.so
+#	ld -G $(OFILES) $(LFLAGS) -o librtmathbase.so
 
 clean :
 	rm -f *.o *.a *.so *.so.1
