Oops - I forgot to put object code entries into the so rule. g++ works. icpc (intel c++ compiler) works but gives one error (g++ linker-specific flag), but that's ignorable.
I can't duplicate the matrixop::minor bug. It vanished, but I did nothing to it!


git-svn-id: file:///mnt/svn/rtmath@79 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-base/Makefile
+++ b/rtmath/rtmath-base/Makefile
@@ -13,7 +13,7 @@ static : $(OFILES)
 	ar rcs librtmathbase.a $(OFILES)
 
 dynamic : $(OFILES)
-	$(CC) $(CFLAGS) $(LFLAGS) -o librtmathbase.so
+	$(CC) $(CFLAGS) -o librtmathbase.so $(OFILES) $(LFLAGS) 
 #	ld -G $(OFILES) $(LFLAGS) -o librtmathbase.so
 
 clean :
