--- a/rtmath/mie/mie.vcxproj
+++ b/rtmath/mie/mie.vcxproj
@@ -133,6 +133,9 @@
       <Project>{4c51f696-286a-4d40-b1bb-f671ecd6c515}</Project>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Makefile" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
