--- a/rtmath/mie/mie.vcxproj.filters
+++ b/rtmath/mie/mie.vcxproj.filters
@@ -72,4 +72,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Makefile">
+      <Filter>Resource Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
