--- a/rtmath/rayleigh/rayleigh.vcxproj
+++ b/rtmath/rayleigh/rayleigh.vcxproj
@@ -122,6 +122,9 @@
     <ClCompile Include="rayleighPhaseFunc.cpp" />
     <ClCompile Include="Scalc.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Makefile" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
