--- a/rtmath/rtmath-base/rtmath-base.vcxproj
+++ b/rtmath/rtmath-base/rtmath-base.vcxproj
@@ -123,6 +123,9 @@
     <ClInclude Include="rtmath-base.h" />
     <ClInclude Include="zeros.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Makefile" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
