--- a/rtmath/rtmath-base/rtmath-base.vcxproj.filters
+++ b/rtmath/rtmath-base/rtmath-base.vcxproj.filters
@@ -57,4 +57,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Makefile">
+      <Filter>Resource Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
