--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -174,6 +174,7 @@
     <None Include="..\rtmath research 6-2-2011.pptx" />
     <None Include="..\rtmath research 7-2011.pptx" />
     <None Include="app.ico" />
+    <None Include="Makefile" />
     <None Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
