lbl loading of HITRAN08.par works. Commiting to test read speeds on solar with Linux.
git-svn-id: file:///mnt/svn/rtmath@82 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/Makefile
+++ b/rtmath/rtmath/Makefile
@@ -1,6 +1,6 @@
 CC=g++
 FILES=`ls *.cpp`
-OFILES=atmos.o damatrix.o damatrix_quad.o debug.o layer.o rtmath.o
+OFILES=atmos.o damatrix.o damatrix_quad.o debug.o layer.o lbl.o rtmath.o
 CFLAGS=-rdynamic -shared -fPIC -Wall 
 LFLAGS=-Wl,export-dynamic -lm
 
