--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -86,6 +86,8 @@
       <PreprocessorDefinitions>WIN32;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <FavorSizeOrSpeed>Neither</FavorSizeOrSpeed>
+      <IntrinsicFunctions>false</IntrinsicFunctions>
+      <OpenMPSupport>true</OpenMPSupport>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -152,6 +154,7 @@
     <ClInclude Include="debug.h" />
     <ClInclude Include="error.h" />
     <ClInclude Include="layer.h" />
+    <ClInclude Include="lbl.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="rtmath.h" />
     <ClInclude Include="Stdafx.h" />
@@ -162,6 +165,7 @@
     <ClCompile Include="damatrix_quad.cpp" />
     <ClCompile Include="debug.cpp" />
     <ClCompile Include="layer.cpp" />
+    <ClCompile Include="lbl.cpp" />
     <ClCompile Include="rtmath.cpp" />
     <ClCompile Include="Stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
