--- a/rtmath/rtmath/rtmath.vcxproj.filters
+++ b/rtmath/rtmath/rtmath.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="atmos.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="lbl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="rtmath.cpp">
@@ -63,6 +66,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="atmos.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="lbl.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
