Most of the lbl code is now done. Need to do unit checks and profile loading and generation of an atmosphere for the lbl tests. I will need this also for the scattering calculations... Began working on profiles.xlsx, which holds an Excel workbook giving the USAF atmospheric profiles. I typed in the TRP-specific stuff, but I need to fill in the auxiliary spreadsheet of gas concentrations, too, for it to work. After that, I'll have a profile to import into my program and use for the lbl test. I'll add the rest of the profiles later.
git-svn-id: file:///mnt/svn/rtmath@95 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -176,6 +176,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\profiles.xlsx" />
     <None Include="..\rtmath research 6-2-2011.pptx" />
     <None Include="..\rtmath research 7-2011.pptx" />
     <None Include="app.ico" />
