--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -176,6 +176,8 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\auxiliary.txt" />
+    <None Include="..\mls.txt" />
     <None Include="..\profiles.xlsx" />
     <None Include="..\rtmath research 6-2-2011.pptx" />
     <None Include="..\rtmath research 7-2011.pptx" />
