Rewrite of lots of code for speed. std::map is too slow. I'll probably have to go to lower-level C-style code, where I can manipulate pointers freely.
HITRAN08.par loads within 11 seconds on the laptop.
Molparams and parsum load in 0 seconds on laptop!
_doMappings needs optimization next (it takes 45 seconds)

I will redo how the lines are sorted by creating the bins for the isotopes first and
iterating over the lines just once.

An actual tau calculation is abysmal. I need to combine all of the subfunctions into
one large function to stop calling all the time.

lbl is getting messy. I should reorganize it, but that comes last.

Also, added timestamp(), timestamp(bool) to debug.
Major speed increase with weak atof/atoi replacement. Should add to linux too.
debug preamble now lists if openmp is used.


git-svn-id: file:///mnt/svn/rtmath@103 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-base/rtmath-base.vcxproj
+++ b/rtmath/rtmath-base/rtmath-base.vcxproj
@@ -116,6 +116,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="enums.h" />
+    <ClInclude Include="macros.h" />
     <ClInclude Include="matrixop.h" />
     <ClInclude Include="phaseFunc.h" />
     <ClInclude Include="polynomial.h" />
