--- a/rtmath/rtmath-base/rtmath-base.vcxproj.filters
+++ b/rtmath/rtmath-base/rtmath-base.vcxproj.filters
@@ -56,6 +56,9 @@
     <ClInclude Include="enums.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="macros.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Makefile">
