rtmath openmp turned off. deltaTau should calculat, but no testing was done. _doMappings gives no error, but loading the atmosphere fails after it was called due to heap corruption. I need to find the source and fix it before continuing.
Going to bed. Will fix tomorrow.


git-svn-id: file:///mnt/svn/rtmath@105 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -87,7 +87,7 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
       <FavorSizeOrSpeed>Neither</FavorSizeOrSpeed>
       <IntrinsicFunctions>false</IntrinsicFunctions>
-      <OpenMPSupport>true</OpenMPSupport>
+      <OpenMPSupport>false</OpenMPSupport>
       <DisableSpecificWarnings>4996</DisableSpecificWarnings>
     </ClCompile>
     <Link>
