filepaths.txt is useful for separating paths on different machines. Forgot to add last time.
git-svn-id: file:///mnt/svn/rtmath@109 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -186,6 +186,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\auxiliary.txt" />
+    <None Include="..\filepaths.txt" />
     <None Include="..\mls.txt" />
     <None Include="..\profiles.xlsx" />
     <None Include="..\rtmath research 6-2-2011.pptx" />
