Debugging added in on a per-class basis. Reorgainzed stdafx.h and header order. Multithreaded code verifiably unstable! Need to rewrite __doMappings again! Cannot find location of overflow when doing calculations, but debug code should catch it if it pops up again. Will next extend debug code to the whole program, minus the libraries. Library new, new[], delete, delete[] may cause crash still, but listing the heap around critical regions of code should help resolve this.
git-svn-id: file:///mnt/svn/rtmath@110 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -83,11 +83,11 @@
     <ClCompile>
       <WarningLevel>Level4</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;SPECIAL_HEAP_CHECK;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <FavorSizeOrSpeed>Neither</FavorSizeOrSpeed>
       <IntrinsicFunctions>false</IntrinsicFunctions>
-      <OpenMPSupport>true</OpenMPSupport>
+      <OpenMPSupport>false</OpenMPSupport>
       <DisableSpecificWarnings>4996</DisableSpecificWarnings>
       <SmallerTypeCheck>true</SmallerTypeCheck>
       <RuntimeTypeInfo>true</RuntimeTypeInfo>
@@ -162,6 +162,7 @@
     <ClInclude Include="damatrix.h" />
     <ClInclude Include="damatrix_quad.h" />
     <ClInclude Include="debug.h" />
+    <ClInclude Include="debug_mem_class.h" />
     <ClInclude Include="error.h" />
     <ClInclude Include="layer.h" />
     <ClInclude Include="lbl.h" />
@@ -186,6 +187,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\auxiliary.txt" />
+    <None Include="..\console-laptop.txt" />
     <None Include="..\filepaths.txt" />
     <None Include="..\mls.txt" />
     <None Include="..\profiles.xlsx" />
