--- a/rtmath/rtmath/rtmath.vcxproj.filters
+++ b/rtmath/rtmath/rtmath.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="debug_mem_class.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="debug_mem.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="rtmath.cpp">
@@ -72,6 +75,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="lbl.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="debug_mem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -102,6 +108,9 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="..\console-laptop.txt">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="debug_subversion.h.template">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
