--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -168,7 +168,6 @@
     <ClInclude Include="debug.h" />
     <ClInclude Include="debug_mem.h" />
     <ClInclude Include="debug_mem_class.h" />
-    <ClInclude Include="debug_subversion.h" />
     <ClInclude Include="debug_subversion.svn.h" />
     <ClInclude Include="enums.h" />
     <ClInclude Include="error.h" />
@@ -191,6 +190,7 @@
     <ClCompile Include="damatrix_quad.cpp" />
     <ClCompile Include="debug.cpp" />
     <ClCompile Include="debug_mem.cpp" />
+    <ClCompile Include="error.cpp" />
     <ClCompile Include="layer.cpp" />
     <ClCompile Include="lbl.cpp" />
     <ClCompile Include="matrixop.cpp" />
