--- a/rtmath/rtmath/rtmath.vcxproj.filters
+++ b/rtmath/rtmath/rtmath.vcxproj.filters
@@ -51,9 +51,6 @@
     <ClInclude Include="debug_mem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="debug_subversion.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="debug_subversion.svn.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -126,6 +123,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="zeros.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="error.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
