Fixed bad value in auxiliary that was preventing reads. Bug fixes to atmos and lbl code. Need to again check lbl units, as taus are ~15000 times too large.
git-svn-id: file:///mnt/svn/rtmath@138 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -129,7 +129,7 @@
       <EnableFiberSafeOptimizations>true</EnableFiberSafeOptimizations>
       <WholeProgramOptimization>true</WholeProgramOptimization>
       <DisableSpecificWarnings>4996</DisableSpecificWarnings>
-      <OpenMPSupport>true</OpenMPSupport>
+      <OpenMPSupport>false</OpenMPSupport>
       <EnableEnhancedInstructionSet>StreamingSIMDExtensions2</EnableEnhancedInstructionSet>
     </ClCompile>
     <Link>
@@ -211,10 +211,11 @@
     <None Include="..\auxiliary.txt" />
     <None Include="..\console-laptop.txt" />
     <None Include="..\filepaths.txt" />
-    <None Include="..\mls.txt" />
     <None Include="..\profiles.xlsx" />
     <None Include="..\rtmath research 6-2-2011.pptx" />
     <None Include="..\rtmath research 7-2011.pptx" />
+    <None Include="..\trp.txt" />
+    <None Include="..\trpaux.txt" />
     <None Include="app.ico" />
     <None Include="debug_subversion.h.template" />
     <None Include="Makefile" />
