config bugfixes. 'Include' needs special treatment involving using Boost to set relative paths relative to the first included file (the file that establishes the root).
git-svn-id: file:///mnt/svn/rtmath@152 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -171,6 +171,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="atmos.h" />
+    <ClInclude Include="config.h" />
     <ClInclude Include="damatrix.h" />
     <ClInclude Include="damatrix_quad.h" />
     <ClInclude Include="debug.h" />
@@ -194,6 +195,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="atmos.cpp" />
+    <ClCompile Include="config.cpp" />
     <ClCompile Include="damatrix.cpp" />
     <ClCompile Include="damatrix_quad.cpp" />
     <ClCompile Include="debug.cpp" />
