Creating backup for extensive modifications to code, since I do not have a good solution for the problem of how to effectively use shared pointers without causing deallocations all over the place. I am removing shared pointers and instead opting for never deallocating memory until the end of a run. I'll keep track of it in a registry of damatrices and do a loop that deletes each element.
git-svn-id: file:///mnt/svn/rtmath@164 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/rtmath.vcxproj.filters
+++ b/rtmath/rtmath/rtmath.vcxproj.filters
@@ -99,6 +99,9 @@
     <ClInclude Include="Scalc-Rayleigh.h">
       <Filter>PhaseFuncs\Rayleigh</Filter>
     </ClInclude>
+    <ClInclude Include="common_templates.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="rtmath.cpp">
