--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -171,6 +171,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="atmos.h" />
+    <ClInclude Include="common_templates.h" />
     <ClInclude Include="config.h" />
     <ClInclude Include="damatrix.h" />
     <ClInclude Include="damatrix_quad.h" />
