--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -170,18 +170,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="atmos.h" />
+    <ClInclude Include="old_atmos.h" />
     <ClInclude Include="common_templates.h" />
     <ClInclude Include="config.h" />
-    <ClInclude Include="damatrix.h" />
-    <ClInclude Include="damatrix_quad.h" />
+    <ClInclude Include="old_damatrix.h" />
+    <ClInclude Include="old_damatrix_quad.h" />
     <ClInclude Include="debug.h" />
     <ClInclude Include="debug_mem.h" />
     <ClInclude Include="debug_mem_class.h" />
     <ClInclude Include="debug_subversion.svn.h" />
     <ClInclude Include="enums.h" />
     <ClInclude Include="error.h" />
-    <ClInclude Include="layer.h" />
+    <ClInclude Include="old_layer.h" />
     <ClInclude Include="lbl.h" />
     <ClInclude Include="macros.h" />
     <ClInclude Include="matrixop.h" />
@@ -199,14 +199,14 @@
     <ClInclude Include="zeros.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="atmos.cpp" />
+    <ClCompile Include="old_atmos.cpp" />
     <ClCompile Include="config.cpp" />
-    <ClCompile Include="damatrix.cpp" />
-    <ClCompile Include="damatrix_quad.cpp" />
+    <ClCompile Include="old_damatrix.cpp" />
+    <ClCompile Include="old_damatrix_quad.cpp" />
     <ClCompile Include="debug.cpp" />
     <ClCompile Include="debug_mem.cpp" />
     <ClCompile Include="error.cpp" />
-    <ClCompile Include="layer.cpp" />
+    <ClCompile Include="old_layer.cpp" />
     <ClCompile Include="lbl.cpp" />
     <ClCompile Include="matrixop.cpp" />
     <ClCompile Include="phaseFunc.cpp" />
