--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -170,18 +170,28 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="old_atmos.h" />
+    <ClInclude Include="damatrix.h" />
+    <ClInclude Include="damatrix_override.h" />
+    <ClInclude Include="old_atmos.h.txt">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClInclude>
     <ClInclude Include="common_templates.h" />
     <ClInclude Include="config.h" />
-    <ClInclude Include="old_damatrix.h" />
-    <ClInclude Include="old_damatrix_quad.h" />
+    <ClInclude Include="old_damatrix.h.txt">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClInclude>
+    <ClInclude Include="old_damatrix_quad.h.txt">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClInclude>
     <ClInclude Include="debug.h" />
     <ClInclude Include="debug_mem.h" />
     <ClInclude Include="debug_mem_class.h" />
     <ClInclude Include="debug_subversion.svn.h" />
     <ClInclude Include="enums.h" />
     <ClInclude Include="error.h" />
-    <ClInclude Include="old_layer.h" />
+    <ClInclude Include="old_layer.h.txt">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClInclude>
     <ClInclude Include="lbl.h" />
     <ClInclude Include="macros.h" />
     <ClInclude Include="matrixop.h" />
@@ -199,14 +209,23 @@
     <ClInclude Include="zeros.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="old_atmos.cpp" />
+    <ClCompile Include="damatrix.cpp" />
+    <ClCompile Include="old_atmos.cpp.txt">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="config.cpp" />
-    <ClCompile Include="old_damatrix.cpp" />
-    <ClCompile Include="old_damatrix_quad.cpp" />
+    <ClCompile Include="old_damatrix.cpp.txt">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="old_damatrix_quad.cpp.txt">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="debug.cpp" />
     <ClCompile Include="debug_mem.cpp" />
     <ClCompile Include="error.cpp" />
-    <ClCompile Include="old_layer.cpp" />
+    <ClCompile Include="old_layer.cpp.txt">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="lbl.cpp" />
     <ClCompile Include="matrixop.cpp" />
     <ClCompile Include="phaseFunc.cpp" />
